[project]
name = "pyepics-asyncio"
version = "0.3.0"
description = "Async/await wrapper for PyEpics"
license = {text = "MIT"}
readme = "README.md"
authors = [{name = "Alexey Gerasev", email = "alexey.gerasev@gmail.com"}]
keywords = ["pyepics", "epics", "asyncio", "async", "await"]
classifiers = [
    'Intended Audience :: Science/Research',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Topic :: Scientific/Engineering',
]
requires-python = ">=3.9"
dependencies = [
    "pyepics>=3.5.1,<4",
]

[project.urls]
Homepage = "https://github.com/agerasev/pyepics-asyncio"
Repository = "https://github.com/agerasev/pyepics-asyncio"

[dependency-groups]
dev = [
    "mypy>=1.4.1,<2",
    "black>=23.3.0,<24",
    "pytest>=7.4.0,<8",
    "pytest-asyncio>=0.21.1,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pyepics_asyncio"]

[tool.black]
line-length = 128

[tool.mypy]
strict = true
