[project]
name = "pyepics-asyncio"
version = "0.4.0"
description = "Async/await wrapper for PyEpics"
license = { text = "MIT" }
readme = "README.md"
authors = [{ name = "Alexey Gerasev", email = "alexey.gerasev@gmail.com" }]
keywords = ["pyepics", "epics", "asyncio", "async", "await"]
classifiers = [
    'Intended Audience :: Science/Research',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Topic :: Scientific/Engineering',
]
requires-python = ">=3.10"
dependencies = ["pyepics~=3.5"]

[project.urls]
Homepage = "https://github.com/agerasev/pyepics-asyncio"
Repository = "https://github.com/agerasev/pyepics-asyncio"

[dependency-groups]
dev = ["pytest~=8.2", "pytest-asyncio~=1.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pyepics_asyncio"]
